--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,8 @@
 {
   "name": "meoan",
-  "app_id": "",
-  "type": "ionic1"
+  "app_id": "a72b2bcd",
+  "type": "ionic1",
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
